<resources>
    <string name="app_name">Drinking Buddy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_about">About</string>

    <string name="permissions_title">Permissions Required</string>
    <string name="permissions_denied">This app needs bluetooth and location permissions to communicate to devices.</string>
    <string name="permissions_denied_forever">This app has no functionality without permissions. Please go to settings to grant permissions before attempting to use the app.</string>
    <string name="permissions_rational">Bluetooth and location permissions are used to find and communicate with devices. The app serves no purpose without these permissions.</string>
    <string name="ok">OK</string>

    <string name="prediction">Prediction</string>

    <string name="no_notifications">No Notifications</string>
    <string name="no_readings">No Readings</string>

    <string name="welcome_title">Welcome!</string>
    <string name="welcome_message">Connect a device to start taking readings.</string>

    <!--  Log Levels  -->
    <string name="log_verbose">Verbose</string>
    <string name="log_debug">Debug</string>
    <string name="log_info">Info</string>
    <string name="log_warn">Warn</string>
    <string name="log_error">Error</string>
    <string name="log_assert">Assert</string>
    <string name="log_unknown">Unknown</string>
</resources>
