<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kyleriedemann.drinkingbuddy.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.kyleriedemann.drinkingbuddy.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.kyleriedemann.drinkingbuddy.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_about"
            app:destination="@id/navigation_about" />
        <action
            android:id="@+id/action_navigation_notifications_to_notificationDetailFragment"
            app:destination="@id/notificationDetailFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_open_enter"
            app:popExitAnim="@anim/fragment_open_exit"
            app:popUpTo="@id/navigation_notifications"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/notificationDetailFragment"
        android:name="com.kyleriedemann.drinkingbuddy.ui.notifications.NotificationDetailFragment"
        android:label="NotificationDetailFragment">
        <argument android:name="notification" app:argType="com.kyleriedemann.drinkingbuddy.data.models.Notification"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.kyleriedemann.drinkingbuddy.ui.about.AboutFragment"
        android:label="@string/title_about">
        <argument android:name="data" app:argType="com.mikepenz.aboutlibraries.LibsBuilder"/>
    </fragment>
</navigation>
